--- a/sty.css
+++ b/sty.css
@@ -1,8 +1,7 @@
-:root{
-    .container__botao {
-        background-color: var(--botao-azul);
-        padding: 1em;
-  color: var(--branco-principal);
-         border-radius: 5px;
-         display: block;
+.oi{
+    background-color:#0087ff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       padding: 0 24px; 
 }
