--- a/sty.css
+++ b/sty.css
@@ -1,8 +1,4 @@
 
 body{
-    background-color:#0087ff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-       padding: 0 24px; 
+    background-color:blueviolet
 }
