--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ body{
 }
     main{
         display:flex;
+        text-align: center;
     }
     footer{
         display: flex;
+        text-align:right;
     }
