--- a/style.css
+++ b/style.css
@@ -9,6 +9,6 @@ body{
         margin-top: 100em;
         text-align: center;
     }
-    ,oi {
+    .oi {
         background-image: url( img/i1,png);
     }
