--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ body{
         text-align: center;
     }
     .oi {
-        background-image: url( img/i1,png);
+        background-image: url( img/i1.png);
     }
