--- a/style.css
+++ b/style.css
@@ -10,5 +10,5 @@ body{
         text-align: center;
     }
     .oi {
-        background-image: url( img/i1.png);
+        background-image: url( https://www.reddit.com/r/MonsterHunter/comments/1763s4i/i_thought_there_were_only_14_weapons/#lightbox);
     }
