--- a/style.css
+++ b/style.css
@@ -12,3 +12,6 @@ body{
     .oi {
         background-image: url( https://www.reddit.com/r/MonsterHunter/comments/1763s4i/i_thought_there_were_only_14_weapons/#lightbox);
     }
+        .o {
+            background-color: rgba(127, 255, 212, 0.506);
+        }
