--- a/style.css
+++ b/style.css
@@ -13,5 +13,8 @@ body{
         background-image: url( https://www.reddit.com/r/MonsterHunter/comments/1763s4i/i_thought_there_were_only_14_weapons/#lightbox);
     }
         .o {
+  
+        }
+        button{
             background-color: rgba(127, 255, 212, 0.506);
         }
