--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ body{
     .oi {
         background-image: url( https://www.reddit.com/r/MonsterHunter/comments/1763s4i/i_thought_there_were_only_14_weapons/#lightbox);
     }
-        .o {
+    input1{   background-color: rgba(217, 255, 0, 0.506);
+
+    }
   
         }
         button{
