--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@ body{
     .oi {
         background-image: url( https://www.reddit.com/r/MonsterHunter/comments/1763s4i/i_thought_there_were_only_14_weapons/#lightbox);
     }
-    input{   background-color: rgba(217, 255, 0, 0);
+    input{   background-color: rgb(255, 255, 255);
 
     }
   
         button{
-            background-color: rgba(127, 255, 212, 0.506);
+            background-color: rgb(170, 0, 255);
         }
