--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@ body{
         text-align: center;
     }
     .oi {
-       width: 50%;
+       width: 90px;
     }
     input{   background-color: rgb(255, 255, 255);
-    .io {
-    width: 50%;
+
  }
     }
   
