--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ body{
     }
     input{   background-color: rgb(255, 255, 255);
 
- }
-    }
+ }i
   
         button{
             background-color: rgb(170, 0, 255);
