--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body{
     }
     input{   background-color: rgb(255, 255, 255);
 
- }i
+ }
+ 
   
         button{
             background-color: rgb(170, 0, 255);
