--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     }
     img {
         height: 200px;
+        object-fit: cover;
         width: 500px;
     }
     input{   background-color: rgb(255, 255, 255);
