--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     }
     img {
         height: 200px;
-        object-fit: cover;
+        object-fit: fill;
         width: 500px;
     }
     input{   background-color: rgb(255, 255, 255);
