--- a/style.css
+++ b/style.css
@@ -21,3 +21,19 @@ body{
         button{
             background-color: rgb(170, 0, 255);
         }
+        nput{
+            width: 200px;
+            height: 30px;
+          }
+          
+          ul{
+            padding: 0px;
+          }
+          
+          li{
+            padding: 5px;
+            margin: 0px;
+            background: #d3d3d3;
+            width: 200px;
+            border: 1px solid white;
+          }
