--- a/style.css
+++ b/style.css
@@ -16,7 +16,24 @@ body{
     }
     input{   background-color: rgb(255, 255, 255);
  }
-
+ divBusca{
+    background-color:#2F4F4F;
+    border:solid 1px;
+    border-radius:15px;
+    width:300px;
+  }
+  
+  #txtBusca{
+    float:left;
+    background-color:transparent;
+    padding-left:5px;
+    font-style:italic;
+    font-size:18px;
+    border:none;
+    height:32px;
+    width:260px;
+  }
   
         button{
             background-color: rgb(170, 0, 255);
+        }
