--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     }
     input{   background-color: rgb(255, 255, 255);
  }
- divBusca{
+   .divBusca{
     background-color:#2F4F4F;
     border:solid 1px;
     border-radius:15px;
