--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     input{   background-color: rgb(255, 255, 255);
  }
    .divBusca{
-    background-color:#2F4F4F;
+    background-color:#00ffff;
     border:solid 1px;
     border-radius:15px;
     width:300px;
