--- a/style.css
+++ b/style.css
@@ -9,11 +9,16 @@ body{
         margin-top: 100em;
         text-align: center;
     }
-    img {
+    .io{
         height: 200px;
         object-fit: fill;
         width: 600px;
     }
+    oi {
+            height: 200px;
+            object-fit: fill
+            width: 600px;
+        }
     input{   background-color: rgb(255, 255, 255);
  }
    .divBusca{
