--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body{
         margin-top: 100em;
         text-align: center;
     }
-    .io{
+    .ca{
         height: 200px;
         object-fit: fill;
         width: 600px;
     }
-    oi {
+    .oi {
             height: 200px;
             object-fit: fill
             width: 600px;
