--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ body{
         object-fit: fill;
         width: 600px;
     }
-    oi {
+    .oi {
             height: 200px;
-            object-fit: fill
+            object-fit: fill;
             width: 600px;
         }
     input{   background-color: rgb(255, 255, 255);
