--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ body{
     }
     .io{
         height: 200px;
-        object-fit: fill;
+        object-fit: cover;
         width: 600px;
     }
     .oi {
             height: 200px;
-            object-fit: fill;
+            object-fit: cover;
             width: 600px;
         }
     input{   background-color: rgb(255, 255, 255);
