--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
         margin-top: 100em;
         text-align: center;
     }
-    .io{
+    .op{
         height: 200px;
         object-fit: fill;
         width: 600px;
@@ -18,27 +18,4 @@ body{
             height: 200px;
             object-fit: scale-down;
             width: 600px;
-        }
-    input{   background-color: rgb(255, 255, 255);
- }
-   .divBusca{
-    background-color:#00ffff;
-    border:solid 1px;
-    border-radius:15px;
-    width:300px;
-  }
-  
-  #txtBusca{
-    float:left;
-    background-color:transparent;
-    padding-left:5px;
-    font-style:italic;
-    font-size:18px;
-    border:none;
-    height:32px;
-    width:260px;
-  }
-  
-        button{
-            background-color: rgb(170, 0, 255);
-        }
+    }
