--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body{
     main{
         text-align: center;
     }
-    footer{
+    .footer{
         margin-top: 100em;
         text-align: center;
     }
-        img{
+    .img{
             width: 300;
             height: auto;
         }
