--- a/style.css
+++ b/style.css
@@ -10,6 +10,6 @@ body{
         text-align: center;
     }
     .img{
-            width: 300;
+            width: 300px;
             height: auto;
         }
