--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ body{
         margin-top: 100em;
         text-align: center;
     }
-        img{ 
+        .oi{ 
             width: 500px;
             height: auto;
         }
+            .op{
+                width: 600px;
+                height: auto;
+            }
