--- a/style.css
+++ b/style.css
@@ -9,11 +9,7 @@ body{
         margin-top: 100em;
         text-align: center;
     }
-        .oi{ 
+        img{ 
             width: 500px;
             height: auto;
         }
-            .op{
-                width: 600px;
-                height: auto;
-            }
