--- a/style.css
+++ b/style.css
@@ -10,6 +10,6 @@ body{
         text-align: center;
     }
         img{ 
-            width: 1000;
+            width: 1000px;
             height: auto;
         }
