--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
         text-align: center;
     }
         img{ 
-            width: 500px;
-            height: auto;
+            width: auto;
+            height: 200;
 
         }
