--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     main{
         text-align: center;
     }
-        img{ 
+        .oi{ 
             width: auto;
             height: 1000px;
 
