--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
     :root{
-        --branco-pincipal: #FFFF;
+        --branco-pincipal: #000000;
     }
     body{
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     text-align: center;
     font-family: var(--branco-pincipal);
 }
@@ -11,7 +11,6 @@
     }
     img { 
             width: auto;
-            height: 300px;
+            height: 1000px;
 
-        }
-       
+    }
