--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     body{
     background-color: rgb(255, 255, 255);
     text-align: center;
-    font-family: var(--branco-pincipal);
+     color: (--branco-pincipal);
 }
     main{
         text-align: center;
