--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     body{
     background-color: rgb(255, 255, 255);
     text-align: center;
-     color: (--branco-pincipal);
+     color:aquamarine;
 }
     main{
         text-align: center;
