--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
         --branco-pincipal: ;
     }
     body{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     text-align: center;
-     color:rgb(0, 0, 0);
+     color:rgba(157,1,2,255);
 }
     main{
         text-align: center;
